--- a/DoubleLinkedList_Test/DoubleLinkedList_Test.vcxproj
+++ b/DoubleLinkedList_Test/DoubleLinkedList_Test.vcxproj
@@ -34,10 +34,12 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClInclude Include="DoubleLinkedList.h" />
+    <ClInclude Include="ListTest.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DoubleLinkedList.cpp" />
+    <ClCompile Include="ListTest.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
